Created basic entities for the application, haven't ran migration script

--- a/MechanicHelper/appsettings.json
+++ b/MechanicHelper/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=   MechanicHelper ;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Mechanic;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AccountDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MechanicHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
