--- a/MechanicHelper/appsettings.json
+++ b/MechanicHelper/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Mechanic;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AccountDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MechanicHelper;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MechanicDbContext": "Server=DESKTOP-ETBLV6V;Database=Mechanic;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
